Fixed subscription popup too narrow in Japanese (#8581)

--- a/website/client-old/css/menu.styl
+++ b/website/client-old/css/menu.styl
@@ -178,6 +178,8 @@
     hrpg-button-color-mixin(lighten($color-toolbar,32.8%))
 .toolbar-subscribe-button, .toolbar-controls .toolbar-subscribe-button
   @extend $hrpg-button
+  button
+    min-width: 130px
 @media screen and (max-width: $xs-max-screen-width)
   .toolbar-toggle
     display: none
